@@ -8,9 +8,12 @@ Version 1.1a to be released
 
 Version 1.0.6 to be released
 ----------------------------
+- Bug #310: Leading space in auto generated labels if they end with "ID" (Qiang)
+- Bug: Syntax errors in autoloaded classes are not reported (Qiang)
 - New #304: Adding flv mimeType to the mimeType array (Qiang)
 - New: Enhanced the 'with' option in relational rules so that it also applies in eager loading (Qiang)
 - New: Added support to allow using named scopes with update and delete methods (Qiang)
+- New: Refactored support for dynamic query options with relational AR (Qiang)
 
 Version 1.0.5 May 10, 2009
 --------------------------
